--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -9,22 +9,28 @@
     border-radius: 50px;
 }
 
-.box-products{
-    border: 5px solid red;
-    background: white;
+.title-Menu {
+    display: flex;
+    height: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
     color: black;
+}
+
+
+.box-products{
+    background: white;
     display: flex;
     align-items: flex-end;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .text-greeting {
     color: white;
     display: flex;
     font-family: 'Courier New', Courier, monospace;
-}
-
-.greetin-mensage h2:hover {
-    color: red;
 }
